--- a/public/style.css
+++ b/public/style.css
@@ -17,8 +17,11 @@ body {
 }
 
 #map {
-    width: 800px;
-    height: 600px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    z-index: 0;
 }
 
 .ghbtns {
@@ -29,4 +32,12 @@ body {
 
 a {
     color: #0077ff;
+}
+
+h1 {
+    z-index: 1;
+    background-color: rgba(255,255,255,0.25);
+    padding: 10px;
+    border-radius: 25px;
+    border: 1px solid #21dc96;
 }
