--- a/sshreact/src/App.css
+++ b/sshreact/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+html {
+    background: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font: 16px/1.4 "Helvetica Neue", Arial, sans-serif;
+}
+.leaflet-popup-content-wrapper {
+    background: rgba(26,26,26,0.75) !important;
+    color: #fff !important;
+    border: #f00 1px solid;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.map {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.ghbtns {
+    position: relative;
+    top: 4px;
+    margin-left: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+    color: #0077ff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+    z-index: 1;
+    background-color: rgba(255,255,255,0.25);
+    padding: 10px;
+    border-radius: 25px;
+    border: 1px solid #21dc96;
+    text-align: center;
+    position: relative;
 }
